--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "browser-sync": "^2.24.4",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^5.1",
+        "ejs": "^2.6.1",
+        "ejs-compiled-loader": "^1.1.0",
+        "html-webpack-plugin": "^3.2.0",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
