updated webpack mix version, bootstrap5 added

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,32 @@
 {
-    "/dist/js/app.js": "/dist/js/app.js",
-    "/dist/css/app.css": "/dist/css/app.css"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/vendor.js": "/js/vendor.js",
+    "/css/vendor.css": "/css/vendor.css",
+    "/fonts/fa-brands-400.eot": "/fonts/fa-brands-400.eot",
+    "/fonts/fa-brands-400.svg": "/fonts/fa-brands-400.svg",
+    "/fonts/fa-brands-400.ttf": "/fonts/fa-brands-400.ttf",
+    "/fonts/fa-brands-400.woff": "/fonts/fa-brands-400.woff",
+    "/fonts/fa-brands-400.woff2": "/fonts/fa-brands-400.woff2",
+    "/fonts/fa-regular-400.eot": "/fonts/fa-regular-400.eot",
+    "/fonts/fa-regular-400.svg": "/fonts/fa-regular-400.svg",
+    "/fonts/fa-regular-400.ttf": "/fonts/fa-regular-400.ttf",
+    "/fonts/fa-regular-400.woff": "/fonts/fa-regular-400.woff",
+    "/fonts/fa-regular-400.woff2": "/fonts/fa-regular-400.woff2",
+    "/fonts/fa-solid-900.eot": "/fonts/fa-solid-900.eot",
+    "/fonts/fa-solid-900.svg": "/fonts/fa-solid-900.svg",
+    "/fonts/fa-solid-900.ttf": "/fonts/fa-solid-900.ttf",
+    "/fonts/fa-solid-900.woff": "/fonts/fa-solid-900.woff",
+    "/fonts/fa-solid-900.woff2": "/fonts/fa-solid-900.woff2",
+    "/fonts/1Ptrg8zYS_SKggPNwIYqWqZPANqczVs.woff2": "/fonts/1Ptrg8zYS_SKggPNwIYqWqZPANqczVs.woff2",
+    "/fonts/1Ptrg8zYS_SKggPNwIouWqZPANqczVs.woff2": "/fonts/1Ptrg8zYS_SKggPNwIouWqZPANqczVs.woff2",
+    "/fonts/1Ptrg8zYS_SKggPNwJYtWqZPANqczVs.woff2": "/fonts/1Ptrg8zYS_SKggPNwJYtWqZPANqczVs.woff2",
+    "/fonts/1Ptrg8zYS_SKggPNwK4vWqZPANqczVs.woff2": "/fonts/1Ptrg8zYS_SKggPNwK4vWqZPANqczVs.woff2",
+    "/fonts/1Ptrg8zYS_SKggPNwN4rWqZPANqczVs.woff2": "/fonts/1Ptrg8zYS_SKggPNwN4rWqZPANqczVs.woff2",
+    "/fonts/1Ptrg8zYS_SKggPNwPIsWqZPANqczVs.woff2": "/fonts/1Ptrg8zYS_SKggPNwPIsWqZPANqczVs.woff2",
+    "/fonts/1Ptug8zYS_SKggPNyC0IT4ttDfA.woff2": "/fonts/1Ptug8zYS_SKggPNyC0IT4ttDfA.woff2",
+    "/fonts/style.css": "/fonts/style.css",
+    "/images/favicon.ico": "/images/favicon.ico",
+    "/images/logistic-logo.svg": "/images/logistic-logo.svg",
+    "/images/pexels-photo-208745.jpeg": "/images/pexels-photo-208745.jpeg"
 }
