--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "npm run development && cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix && mix watch --hot",
+        "production": "mix --production",
+        "hot1": "npm run development && NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
-        "bootstrap": "^4.3.1",
-        "browser-sync": "^2.24.4",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "^5.1",
-        "ejs": "^2.6.1",
-        "ejs-compiled-loader": "^1.1.0",
-        "html-webpack-plugin": "^3.2.0",
-        "jquery": "^3.2",
-        "laravel-mix": "^2.0",
-        "lodash": "^4.17.4",
-        "popper.js": "^1.12"
+        "@popperjs/core": "^2.9.2",
+        "axios": "^0.21",
+        "bootstrap": "^5.0.2",
+        "ejs": "^3.1.6",
+        "ejs-compiled-loader": "^3.1.0",
+        "html-webpack-plugin": "^5.3.2",
+        "jquery": "^3.6",
+        "laravel-mix": "^6.0",
+        "lodash": "^4.17.21",
+        "postcss": "^8.1.14",
+        "sass": "^1.35.2",
+        "sass-loader": "^12.1.0"
     }
 }
